--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-es (17 sloc)  884 Bytes
 <!DOCTYPE html>
 <html ng-app="mutantApp">
   <head>
@@ -9,10 +8,14 @@ es (17 sloc)  884 Bytes
   <body>
     This is the body of the HTML
 
+    <!-- Third-party scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.3/foundation.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
     <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
     <script src="https://cdn.firebase.com/libs/angularfire/1.2.0/angularfire.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.min.js"></script>
+
+    <!-- Main app Modules -->
+    <script src="app/app.module.js"></script>
   </body>
