Create config file and add home page to website

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <body>
     This is the body of the HTML
 
+
+    <div ui-view class="row"></div>
+
     <!-- Third-party scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.2.3/foundation.min.js"></script>
@@ -18,4 +21,8 @@
 
     <!-- Main app Modules -->
     <script src="app/app.module.js"></script>
+
+    <!-- home modules -->
+    <script src="app/home/home.module.js"></script>
+    <script src="app/home/config.route.js"></script>
   </body>
