--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,1 +1,6 @@
-We made it to home!!!
+<div class="small-12 columns text-center home">
+  <h1>Mutant Office Hours</h1>
+  <h4>An Angular App for managing the office hours wait list for
+  Mutant School</h4>
+  <a href="#" class="large button">Sign Up Now!</a>
+</div>
