--- a/index.html
+++ b/index.html
@@ -24,4 +24,9 @@
     <!-- home modules -->
     <script src="app/home/home.module.js"></script>
     <script src="app/home/config.route.js"></script>
+
+    <!-- Mutant List modules -->
+    <script src="app/mutantList/mutantList.module.js"></script>
+    <script src="app/mutantList/config.route.js"></script>
+    <script src="app/mutantList/mutantList.controller.js"></script>
   </body>
