--- a/app/mutantList/mutantList.html
+++ b/app/mutantList/mutantList.html
@@ -1,1 +1,21 @@
+<form>
+  <div class="medium-3 small-6 columns">
+    <input type="text" name="mutantName" placeholder="Name">
+  </div>
+
+  <div class="medium-3 small-6 columns">
+    <input type="text" name="phone" placeholder="Phone Number">
+  </div>
+
+  <div class="medium-4 small-8 columns">
+    <input type="text" name="topic" placeholder="Topic">
+  </div>
+
+
+  <div class="medium-2 small-4 columns">
+    <button type="submit" class="expanded button">Submit</button>
+  </div>
+</form>
+
+
 {{ vm.mutants }}
