--- a/app/mutantList/mutantList.html
+++ b/app/mutantList/mutantList.html
@@ -1,14 +1,14 @@
-<form>
+<form ng-submit="vm.addMutant()">
   <div class="medium-3 small-6 columns">
-    <input type="text" name="mutantName" placeholder="Name">
+    <input ng-model="vm.newMutant.name" type="text" name="mutantName" placeholder="Name">
   </div>
 
   <div class="medium-3 small-6 columns">
-    <input type="text" name="phone" placeholder="Phone Number">
+    <input ng-model="vm.newMutant.phoneNumber"type="text" name="phone" placeholder="Phone Number">
   </div>
 
   <div class="medium-4 small-8 columns">
-    <input type="text" name="topic" placeholder="Topic">
+    <input ng-model="vm.newMutant.topic"type="text" name="topic" placeholder="Topic">
   </div>
 
 
@@ -17,5 +17,5 @@
   </div>
 </form>
 
-
+{{ vm.newMutant }}
 {{ vm.mutants }}
