--- a/app/mutantList/mutantList.html
+++ b/app/mutantList/mutantList.html
@@ -1,17 +1,13 @@
 <form ng-submit="vm.addMutant()">
   <div class="medium-3 small-6 columns">
-    <input ng-model="vm.newMutant.name" type="text" name="mutantName" placeholder="Name">
+    <input ng-model="vm.newMutant.name" type="text" name="mutantName" placeholder="Name" required>
   </div>
-
   <div class="medium-3 small-6 columns">
-    <input ng-model="vm.newMutant.phoneNumber"type="text" name="phone" placeholder="Phone Number">
+    <input ng-model="vm.newMutant.phone" type="text" name="phone" placeholder="Phone #" required>
   </div>
-
   <div class="medium-4 small-8 columns">
-    <input ng-model="vm.newMutant.topic"type="text" name="topic" placeholder="Topic">
+    <input ng-model="vm.newMutant.topic" type="text" name="topic" placeholder="Topic" required>
   </div>
-
-
   <div class="medium-2 small-4 columns">
     <button type="submit" class="expanded button">Submit</button>
   </div>
@@ -34,8 +30,8 @@
         <td>{{ mutant.name }}</td>
         <td>{{ mutant.phone }}</td>
         <td>{{ mutant.topic }}</td>
-        <td>{{ mutant.notified }}</td>
-        <td>{{ mutant.complete }}</td>
+        <td>{{ mutant.notified ? 'Yes' : 'No' }}</td>
+        <td><input type="checkbox" ng-model="mutant.complete"></td>
         <td>
           <button class="button success">Text</button>
           <button class="button alert">Delete</button>
