--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
     <!-- Main app Modules -->
     <script src="app/app.module.js"></script>
 
+    <!-- auth module -->
+    <script src ="app/auth/auth.module.js"></script>
+    <script src ="app/auth/auth.controller.js"></script>
+    <script src ="app/auth/config.route.js"></script>
+
     <!-- home modules -->
     <script src="app/home/home.module.js"></script>
     <script src="app/home/config.route.js"></script>
