--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
   </head>
   <body>
 
+    <div class="top-bar" id="main-menu">
+      <div class="top-bar-left">
+        <ul class="dropdown menu" data-dropdown-menu>
+          <li class="menu-text">Mutant School</li>
+        </ul>
+      </div>
+      <div class="top-bar-right">
+        <ul class="menu" data-responsive-menu="drilldown medium-dropdown">
+
+          <li><a href="#">Login</a></li>
+          <li><a href="#">Logout</a></li>
+        </ul>
+      </div>
+    </div>
+
     <div ui-view class="row" id="main"></div>
 
     <!-- Third-party scripts -->
