Add button navigation when signing up and loging out

--- a/app/home/home.html
+++ b/app/home/home.html
@@ -2,5 +2,5 @@
   <h1>Mutant Office Hours</h1>
   <h4>An Angular App for managing the office hours wait list for
   Mutant School</h4>
-  <a href="#" class="large button">Sign Up Now!</a>
+  <a ui-sref="register" class="large button">Sign Up Now!</a>
 </div>
