--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
   </head>
   <body>
 
-    <div class="top-bar" id="main-menu">
+    <div  ng-controller="AuthController as vm" class="top-bar" id="main-menu">
       <div class="top-bar-left">
         <ul class="dropdown menu" data-dropdown-menu>
-          <li class="menu-text">Mutant School</li>
+          <li><a class="menu-text" ui-sref="home">Mutant School</a></li>
         </ul>
       </div>
       <div class="top-bar-right">
         <ul class="menu" data-responsive-menu="drilldown medium-dropdown">
 
-          <li><a href="#">Login</a></li>
-          <li><a href="#">Logout</a></li>
+          <li><a ui-sref="login">Login</a></li>
+          <li><a href="#" ng-click="vm.logout()">Logout</a></li>
         </ul>
       </div>
     </div>
