Set up core module

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
     <script src ="app/auth/auth.controller.js"></script>
     <script src ="app/auth/config.route.js"></script>
 
+    <!-- core module -->
+    <script src= "app/core/core.module.js"></script>
+
     <!-- home modules -->
     <script src="app/home/home.module.js"></script>
     <script src="app/home/config.route.js"></script>
