set up mutant service

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
     <!-- core module -->
     <script src= "app/core/core.module.js"></script>
+    <script src = "app/core/mutant.service.js"></script>
 
     <!-- home modules -->
     <script src="app/home/home.module.js"></script>
