--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <!-- core module -->
     <script src= "app/core/core.module.js"></script>
     <script src = "app/core/mutant.service.js"></script>
+    <script src = "app/core/firebaseData.service.js"></script>
 
     <!-- home modules -->
     <script src="app/home/home.module.js"></script>
