--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <script src= "app/core/core.module.js"></script>
     <script src = "app/core/mutant.service.js"></script>
     <script src = "app/core/firebaseData.service.js"></script>
+    <script src = "app/core/textMessage.service.js"></script>
 
     <!-- home modules -->
     <script src="app/home/home.module.js"></script>
