--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
       </div>
       <div class="top-bar-right">
         <ul class="menu" data-responsive-menu="drilldown medium-dropdown">
-
-          <li><a ui-sref="login">Login</a></li>
-          <li><a href="#" ng-click="vm.logout()">Logout</a></li>
+          <li><a ui-sref="login" ng-show="!vm.isLoggedIn()">Log in</a></li>
+          <li><a href="#" ng-click="vm.logout()" ng-show="vm.isLoggedIn()">Log out</a></li>
         </ul>
       </div>
     </div>
