--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
     <script src="app/home/home.module.js"></script>
     <script src="app/home/config.route.js"></script>
 
+    <!-- layout module -->
+    <script src="app/layout/layout.module.js"></script>
+
     <!-- Mutant List modules -->
     <script src="app/mutantList/mutantList.module.js"></script>
     <script src="app/mutantList/config.route.js"></script>
