Add navbar markup to navbar.html. Create xtNavbar directive. Include script tag on index.html. Add xt-navbar element above ui-view

--- a/index.html
+++ b/index.html
@@ -8,19 +8,7 @@
   </head>
   <body>
 
-    <div  ng-controller="AuthController as vm" class="top-bar" id="main-menu">
-      <div class="top-bar-left">
-        <ul class="dropdown menu" data-dropdown-menu>
-          <li><a class="menu-text" ui-sref="home">Mutant School</a></li>
-        </ul>
-      </div>
-      <div class="top-bar-right">
-        <ul class="menu" data-responsive-menu="drilldown medium-dropdown">
-          <li><a ui-sref="login" ng-show="!vm.isLoggedIn()">Log in</a></li>
-          <li><a href="#" ng-click="vm.logout()" ng-show="vm.isLoggedIn()">Log out</a></li>
-        </ul>
-      </div>
-    </div>
+    <xt-navbar></xt-navbar>
 
     <div ui-view class="row" id="main"></div>
 
@@ -54,6 +42,7 @@
 
     <!-- layout module -->
     <script src="app/layout/layout.module.js"></script>
+    <script src="app/layout/navbar.directive.js"></script>
 
     <!-- Mutant List modules -->
     <script src="app/mutantList/mutantList.module.js"></script>
